deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zhishuyun-auth-frontend
  name: zhishuyun-auth-frontend
  namespace: zhishuyun
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: zhishuyun-auth-frontend
  template:
    metadata:
      labels:
        app: zhishuyun-auth-frontend
    spec:
      containers:
        - image: zhishuyun/auth-frontend:${TAG}
          name: zhishuyun-auth-frontend
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '200Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '200m'
      imagePullSecrets:
        - name: docker-registry
      restartPolicy: Always
