deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zhishuyun-auth-frontend
  name: zhishuyun-auth-frontend
  namespace: zhishuyun
spec:
  ports:
    - name: '8083'
      port: 8083
      targetPort: 80
  selector:
    app: zhishuyun-auth-frontend
